--- a/slack-clone/package.json
+++ b/slack-clone/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "graphql": "^15.0.0",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.15",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.8",
     "react": "^16.13.1",
