--- a/slack-clone/package.json
+++ b/slack-clone/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.2.1",
     "apollo-boost": "^0.4.7",
     "axios": "^0.19.2",
+    "formik": "^2.1.4",
     "graphql": "^15.0.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
